# libfemto

./: CMakeLists.txt  README.md  main.cpp
cmake/: femtoConfig.cmake.in
include/: femto.hpp  i_configurable.hpp  i_lifecycle.hpp  i_process.hpp  point2.hpp  thread_process.hpp  thread_worker.hpp  types.hpp  utils.hpp
tests/: CMakeLists.txt  point_tests.cpp  thread_tests.cpp
